[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exit-stack-container"
version = "0.1.3"
description = "Async lifecycle management with declarative dependency injection"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Salavat D. Samigoullin", email = "qqq@oid.su"},
]
keywords = [
    "dependency-injection",
    "async",
    "lifecycle",
    "di-container",
    "asyncio",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "msgspec>=0.20.0",
    "msgspec-settings>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.18.0",
    "ipywidgets>=8.1.0",
]

[project.urls]
Repository = "https://github.com/qqqoid/exit-stack-container"
Issues = "https://github.com/qqqoid/exit-stack-container/issues"

[tool.ruff]
line-length = 135
